2007-08-18  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* Version 13.1 Hattori released.

	* skk-version.el (skk-version): Bump to 13.1.

2007-08-17  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-wikipedia-1): Fix for nested
	<ul>s.
	(skk-annotation-url-package-available-p): Require un-define for
	Emacs 20, 21 or XEmacs 21.4.

2007-08-16  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-wikipedia-1): Workaround for
	nested <ul>s.

	* skk.el (backward-kill-sentence): New advice.

2007-08-15  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-vars.el
	(skk-annotation-en-wiktionary-part-of-speech-regexp):
	Add "Quasi-Adjective", "Proverb" "Personal pronoun" and "Counter".

	(skk-annotation-en-wiktionary-lang-regexp): Typo.

2007-08-14  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-tankan.el (skk-search-tankanji): Try to talk to a server.

2007-08-13  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	Suggested by Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.

	* skk-vars.el (skk-show-inline):
	(skk-show-tooltip):

	Update docstring.

	* skk-macs.el (skk-erase-prefix): Call `redraw-frame' under Emacs
	20.7.

	* skk.el (skk-inline-show): Do not call `propertize' if face is
	nil.
	(skk-setup-delete-selection-mode): Always put property for
	delsel or pending-del.

2007-08-11  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* Makefile (clean): Don't remove skk-dic.el.

2007-08-10  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	Suggested by Eiji Obata <e-obata@zero.ad.jp>.

	* skk-comp.el (skk-search-lisp-symbol): Modify doc string.

	* skk-comp.el (skk-smart-find): Load "smart-find" only if
	function `smart-find-file' is not defined.

	* skk-vars.el
	(skk-annotation-en-wiktionary-part-of-speech-regexp): Add
	"Letter".

	* skk.el (skk-search-jisx0208-romaji): Modify doc string.

2007-08-09  Kitamoto Tsuyoshi  <lisp_interaction@yahoo.co.jp>

	* doc/skk.texi: Typo.

2007-08-08  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
