@@ -224,16 +224,18 @@
 ;;;###autoload
 (defun skk-e21-prepare-modeline-properties ()
   (setq skk-icon
-	(let* ((dir (file-name-directory
-		     (static-if (fboundp 'locate-file)
-			 ;; Emacs 22.1 or later
-			 (or (locate-file "skk/skk.xpm"
-					  (list (expand-file-name
-						 "../../.."
-						 data-directory)))
-			     (locate-file "skk/skk.xpm" (list data-directory)))
-		       ;; Emacs 21
-		       skk-tut-file)))
+	(let* ((dir (ignore-errors
+		      (file-name-directory
+		       (static-if (fboundp 'locate-file)
+			   ;; Emacs 22.1 or later
+			   (or (locate-file "skk/skk.xpm"
+					    (list (expand-file-name
+						   "../../.."
+						   data-directory)))
+			       (locate-file "skk/skk.xpm"
+					    (list data-directory)))
+			 ;; Emacs 21
+			 skk-tut-file))))
 	       (image (when dir
 			(find-image
 			 `((:type xpm
